# persistent-rethinkdb

./: README  persistent-rethinkdb.cabal
Database/Persist/: RethinkDB.hs
