name:            persistent-rethinkdb
version:         0.1
license:         MIT
author:          Etienne Laurin <etienne@atnnn.com>
maintainer:      Etienne Laurin <etienne@atnnn.com>
synopsis:        Backend for the persistent library using RethinkDB.
category:        Database
stability:       Experimental
cabal-version:   >= 1.6
build-type:      Simple
description:     RethinkDB backend for the persistent library.

library
    build-depends:   base               >= 4 && < 5
                   , persistent         >= 2.1.1   && < 3
                   , text               >= 0.8
                   , transformers       >= 0.2.1
                   , containers         >= 0.2
                   , bytestring         >= 0.9
                   , conduit            >= 0.5.3
                   , resourcet          >= 0.3
                   , rethinkdb          >= 1.15.2.1   && < 1.16
                   , network            >= 2.2.1.7
                   , cereal             >= 0.3.0.0
                   , path-pieces        >= 0.1
                   , monad-control      >= 0.3
                   , aeson              >= 0.5
                   , attoparsec
                   , pool-conduit       >= 0.1
                   , time
                   , bytestring

    exposed-modules: Database.Persist.RethinkDB
    ghc-options:     -Wall

